datasets/dataset_txt/pipenv/pipenv_1008.txt
shapiromatron commented on 29 May 2018
We have a python3.6 project which requires "ruamel.yaml=<0.15". When using a standard virtual environment I can install fine, but when using pipenv it tries to install the python2.7 - only ruamel.ordereddict dependency:
This works:
python3 -m venv foo
source foo/bin/activate
pip install "ruamel.yaml<0.15"
This fails:
mkdir bar && cd bar
pipenv install "ruamel.yaml<0.15"
With the error...
    ordereddict.c:2859:26: error: no member named 'ma_mask' in 'PyDictObject'
            res = res + (mp->ma_mask + 1) * sizeof(PyOrderedDictEntry);
                         ~~  ^
    3 warnings and 5 errors generated.
    error: command 'clang' failed with exit status 1

    ----------------------------------------

  Failed building wheel for ruamel.ordereddict
Command "/Users/ashapiro/.local/share/virtualenvs/bar-eB57WnA1/bin/python3.6...
I'm using pyenv for managing python versions and I have both 2.7 and 3.6 installed; my default global is 3.6. Here's output for pipenv:
$ python -m pipenv.help | pbcopy
$ python -m pipenv.help output